--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-tags
-STM32CubeIDE/Debug/
-STM32CubeIDE/Release/
-STM32CubeIDE/.settings/stm32cubeide.project.prefs
+*.o
+*.out
+*.bak
+build
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+.ccls-cache
