--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,5 +12,31 @@
         "preLaunchTask": "CMake: build",
         "showDevDebugOutput": "raw",
         "svdPath": "${workspaceFolder}/.vscode/STM32U5A9.svd"
+    },
+    {
+        "cwd": "${workspaceFolder}",
+        "executable": "./build/Debug/dashPanel25.elf",
+        "name": "Debug with STLINK",
+        "request": "launch",
+        "type": "cortex-debug",
+        "servertype": "stlink",
+        "configFiles": ["interface/stlink.cfg", "target/stm32u5x.cfg"],
+        "searchDir": [],
+        "preLaunchTask": "CMake: build",
+        "showDevDebugOutput": "raw",
+        "svdPath": "${workspaceFolder}/.vscode/STM32U5A9.svd"
+    },
+    {
+        "cwd": "${workspaceFolder}",
+        "executable": "./build/Debug/dashPanel25.elf",
+        "name": "Debug with STUTIL",
+        "request": "launch",
+        "type": "cortex-debug",
+        "servertype": "stutil",
+        "configFiles": ["interface/stlink.cfg", "target/stm32u5x.cfg"],
+        "searchDir": [],
+        "preLaunchTask": "CMake: build",
+        "showDevDebugOutput": "raw",
+        "svdPath": "${workspaceFolder}/.vscode/STM32U5A9.svd"
     }]
 }
