Maybe got nonflashing debug???

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [{
         "cwd": "${workspaceFolder}",
         "executable": "./build/Debug/dashPanel25.elf",
-        "name": "Debug with STUTIL",
+        "name": "Debug with ST-Util",
         "request": "launch",
         "type": "cortex-debug",
         "servertype": "stutil",
@@ -15,10 +15,11 @@
     },{
         "cwd": "${workspaceFolder}",
         "executable": "./build/Debug/dashPanel25.elf",
-        "name": "Debug with OpenOCD",
-        "request": "launch",
+        "name": "Debug sans flashing with ST-Util",
+        "request": "attach",
         "type": "cortex-debug",
-        "servertype": "openocd",
+        "servertype": "stutil",
+        "runToEntryPoint": "main",
         "configFiles": ["interface/stlink.cfg", "target/stm32u5x.cfg"],
         "searchDir": [],
         "preLaunchTask": "CMake: build",
