--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Middlewares/Third_Party/LVGL/lvgl"]
+[submodule "name"]
 	path = Middlewares/Third_Party/LVGL/lvgl
-	url = https://github.com/lvgl/lvgl.git
+	url = ../../lvgl/lvgl.git
