--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "name"]
+[submodule "LVGL"]
 	path = Middlewares/Third_Party/LVGL/lvgl
 	url = ../../lvgl/lvgl.git
+	branch = release/v8.3
