Working on more changes!
Co-authored-by: ahoysal <ahoysal@users.noreply.github.com>
Co-authored-by: ManasijaBhargavan <ManasijaBhargavan@users.noreply.github.com>
Co-authored-by: Bailey Say <baileyasay@gmail.com>
Co-authored-by: kzwicker <kzwicker@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "*.h": "c",
         "*.c": "c",
     },
-    "cSpell.diagnosticLevel": "Hint"
+    "cSpell.diagnosticLevel": "Hint",
+    "cmake.sourceDirectory": "${workspaceFolder}/Users/aagrim/Workspace/c/pico-examples/gpio"
 }
