--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
         "*.c": "c",
     },
     "cSpell.diagnosticLevel": "Hint",
-    "cmake.sourceDirectory": "${workspaceFolder}/Users/aagrim/Workspace/c/pico-examples/gpio"
+    "cmake.sourceDirectory": "/home/dchucsb/gaucho-racing/Dash-Panel-V2"
 }
