--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
         "searchDir": [],
         "preLaunchTask": "CMake: build",
         "showDevDebugOutput": "raw",
-        "svdPath": "${workspaceFolder}/.vscode/STM32U5A9.svd"
+        "svdPath": "${workspaceFolder}/.vscode/STM32U599.svd"
     },{
         "cwd": "${workspaceFolder}",
         "executable": "./build/Debug/dashPanel25.elf",
@@ -24,6 +24,6 @@
         "searchDir": [],
         "preLaunchTask": "CMake: build",
         "showDevDebugOutput": "raw",
-        "svdPath": "${workspaceFolder}/.vscode/STM32U5A9.svd"
+        "svdPath": "${workspaceFolder}/.vscode/STM32U599.svd"
     }]
 }
